[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ugv-common"
version = "0.1.0"
description = "Shared rover state, survey/waypoints, GNSS, and navigation utilities"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "hoffmaao" }]
dependencies = [
    "pyserial>=3.5",
    "pyubx2>=1.2.0",
]

[project.optional-dependencies]
enkf = ["numpy>=1.24"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]